--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-pandas
-numpy
-seaborn
-matplotlib
-scikit-learn
-catboost
-xgboost
+pandas~=2.3.0
+numpy~=2.3.0
+seaborn~=0.13.2
+matplotlib~=3.10.3
+scikit-learn~=1.7.0
+catboost~=1.2.8
+xgboost~=3.0.2
+dill~=0.4.0
+setuptools~=80.9.0
 
 #-e .
