--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -1,3 +1,1 @@
-option_settings:
-    "aws:elasticbeanstalk:container:python":
-    WSGI: application:application
+option_settings:"aws:elasticbeanstalk:container:python": WSGI: application:application
